# homekit-room-sync

./: Makefile  README.md  pyproject.toml
custom_components/homekit_room_sync/: bridge_manager.py  config_flow.py  coordinator.py
tests/: test_config_flow.py  test_coordinator.py
