[tool.poetry]
name = "homekit-room-sync"
version = "0.0.1"
description = "Home Assistant custom integration to sync Areas with HomeKit Rooms"
authors = ["Lucas Crostarosa <lucas@crostamusic.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lcrostarosa/homekit-room-sync"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
mypy = "^1.13.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
voluptuous = "^0.15.0"
homeassistant = "^2025.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.homekit_room_sync"]

[tool.mypy]
python_version = "3.13.3"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

